Slide height fix

--- a/css/slide/component.css
+++ b/css/slide/component.css
@@ -1,8 +1,10 @@
+/*
 .container-slide {
 	position: relative;
 	height: 770px;
     margin-top: -40px;
 }
+*/
 
 .js .boxgallery,
 .js .boxgallery div {
