--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,35 @@
 .navbar-brand {
 	 padding: 1px 30px;
 }
+
+.section, .section-colored {
+  padding: 57px 0;
+}
+
+/* PACE LOADING THEME*/
+.pace {
+  -webkit-pointer-events: none;
+  pointer-events: none;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.pace-inactive {
+  display: none;
+}
+
+.pace .pace-progress {
+  background: #29d;
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  right: 100%;
+  width: 100%;
+  height: 2px;
+}
+
+.pace .pace-progress {
+  background: #07ccd4;
+}
