--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{
-	background-color: #0CC7C7;
+	background-color: white;
 }
 
 .navbar-inverse {
