--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,22 @@
   background: #07ccd4;
   height: 3px;
 }
-.home {
-    padding-top: 500px;
+
+/*
+    .home {
+        padding-top: 500px;
+    }
+
+    .home4 {
+        padding-top: 500px;
+    }
+*/
+
+.navbar-inverse {
+    border-bottom: 0px;
 }
 
-.home4 {
-    padding-top: 500px;
+@media only screen and (min-width: 1100px) {
+.container-slide {
+    height: 617px;
 }
