--- a/css/main.css
+++ b/css/main.css
@@ -3076,7 +3076,7 @@ padding: 80px 0 80px 0;
 	text-shadow:0 1px 1px rgba(0,0,0,0.2);
 }
 .home4-city-bg {
-	background-image:url('http://placehold.it/1920x1080');
+	background-image: url(/images/img/Lozenec_Sea.jpg);
 	background-repeat:no-repeat !important;
 	width: 100%;	
 	background-attachment: fixed;    
