--- a/templates/footer_4.html
+++ b/templates/footer_4.html
@@ -1,53 +1,91 @@
 <footer>
-    
-    <div class="container top-footer-in twocolor4">
-        <div class="row row-footer">
-           <div class="col-lg-3 col-md-3">
-             <div style="width:100%"><a class="logofooter4" href="#/"><img src="images/logofooter.png" alt="logo" /></a></div>
-             <p>
-                Mellentesque habitant morbi tristique senectus et netus et malesuada famesac turpis egestas.
-             </p>
-             <p><i class="fa fa-phone"></i>Phone : 041-123 965</p>
-             <p><i class="fa fa-envelope-o"></i>Email: info@angula.com</p>
-           </div>
-           <div class="col-lg-3 col-md-3">
-             <h4>Last News</h4>
-             <ul class="footer-menu"> 
-                 <li><a href="#">AngularJS extend HTML</a></li> 
-                 <li><a href="#">AngularJS is a toolset</a></li> 
-                 <li><a href="#">Parallax Sections</a></li> 
-                 <li><a href="#">Behind the DOM elements</a></li> 
-                 <li><a href="#">Data-binding automatic</a></li> 
-             </ul>
-           </div>
-            <div class="col-lg-3 col-md-3">
-             <h4>Useful Links</h4>
-             <ul class="footer-menu"> 
-                 <li><a href="#">Support</a></li> 
-                 <li><a href="#">Privacy policy</a></li> 
-                 <li><a href="#">Terms of use</a></li> 
-                 <li><a href="#">FAQ</a></li> 
-                 <li><a href="#">Help</a></li> 
-             </ul>
-           </div>
-           <div class="col-lg-3 col-md-3">
-             <h4>Tags Cloud</h4>
-             <div class="tags4"> 
-                 <a href="#">Design</a> 
-                 <a href="#">User interface</a> 
-                 <a href="#">Performance</a> 
-                 <a href="#">Development</a> 
-                 <a href="#">WordPress</a> 
-                 <a href="#">SEO</a> 
-                 <a href="#">Joomla</a> 
-                 <a href="#">ASP.Net</a> 
-                 <a href="#">SharePoint</a> 
-                 <a href="#">Bootstrap</a> 
-             </div>
-           </div>
+    <div class="footer-effect-color wave">
+    <div class="container">
+    <div class="row last-inf-dt footer-contact">
+      
+        <div class="col-sm-8">
+            <h4 class="contact-title">Свържете се с нас!</h4>
+            
+            <p class="contact-sub-txt">Lid est laborum dolo rumes fugats untras. <br>Etharums ser quidem rerum facilis dolores nemis omnis fugats sadips amets.</p>
+
+            <form id="contact-form" role="form" method="POST" action="#" class="ng-pristine ng-valid">
+                <div class="row">
+                    <div class="form-group col-lg-6">
+                        <label for="input1">Име *</label>
+                        <input type="text" name="contact_name" placeholder="e.g. Jhon Smith" class="form-control" id="name">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label for="input1">Фамилия</label>
+                        <input type="text" name="contact_name" placeholder="e.g. Angu Studio" class="form-control" id="input5">
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="form-group col-lg-6">
+                        <label for="input2">ел. поща *</label>
+                        <input type="email" name="contact_email" placeholder="e.g. mail@example.com" class="form-control" id="email">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label for="input3">телефон</label>
+                        <input type="phone" name="contact_phone" placeholder="+004 123 23 456" class="form-control" id="input3">
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="form-group col-lg-12">
+                        <label for="input4">Съобщение</label>
+                        <textarea name="contact_message" class="form-control" rows="6" id="message"></textarea>
+                    </div>
+                    <div class="form-group col-lg-12">
+                        <input type="hidden" name="save" value="contact">
+                        <button type="submit" class="btn btn-primary bt-contact-submit">Изпрати</button>
+                        <p class="success">Вашето съобщение е изпратено успешно.</p>
+                        
+                        <p class="error">Емайл адресът трябва да е валиден или съобщението да е по дълго от 20 знака.</p>
+                    </div>
+                </div>
+            </form>
+            
         </div>
-        
+
+        <div class="col-sm-4 contact-details">
+            <h4 class="contact-title">Контакт</h4>
+            
+            <p>
+                5555 44th Street N.<br>
+                Bootstrapville, CA 32323<br>
+            </p>
+
+            <p><i class="fa fa-phone"></i> <abbr title="Phone">P</abbr>: (555) 984-3600</p>
+
+            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:feedback@angula.com">feedback@angula.com</a></p>
+
+            <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
+            <ul class="list-unstyled list-inline list-social-icons">
+                <li class="tooltip-social facebook-link">
+                    <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook">
+                        <i class="fa fa-facebook"></i>
+                     </a>
+                </li>
+                <li class="tooltip-social linkedin-link">
+                    <a href="#" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </li>
+                <li class="tooltip-social twitter-link">
+                    <a href="#" data-toggle="tooltip" data-placement="top" title="Twitter">
+                             <i class="fa fa-twitter"></i>
+                     </a>
+                </li>
+                <li class="tooltip-social google-plus-link">
+                    <a href="#" data-toggle="tooltip" data-placement="top" title="Google+">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2955.121162336648!2d27.80289999999999!3d42.211855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDEyJzQyLjciTiAyN8KwNDgnMTAuNCJF!5e0!3m2!1sen!2sbg!4v1436989914160" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <h1><a href="https://maps.google.com?saddr=Current+Location&daddr=42.211855,27.802900">Намерете път до нас!</a></h1>
+
     </div>
+    <!-- /.row --> 
+</div>
     <div class="info-footer">
         <div class="container">
             <div class="row">
@@ -59,5 +97,5 @@
                     </div>
             </div>
         </div>
-    
+    </div>
 </footer>
